@@ -1,3 +1,9 @@
+xboxdrv 0.4.10 - (??/Nov/2009)
+=============================
+
+* fixed mouse emulation a bit, still somewhat broken
+
+
 xboxdrv 0.4.9 - (01/Nov/2009)
 =============================
 
